Working on workflow

--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Build kernel
 
 on:
   push:
@@ -15,5 +15,3 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: make
-    - name: make check
-      run: make check
